--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Key | Brainrot Hub</title>
+    <title>Generador de Key</title>
     <style>
         /* Estilo Dark Neon */
         body {
@@ -66,12 +66,12 @@
 <body>
 
     <div class="container">
-        <h1>BRAINROT KEY</h1>
+        <h1>KEY</h1>
         <p style="color: #888; font-size: 14px;">Introduce tu UserId de Roblox</p>
         
         <input type="number" id="userId" placeholder="Ej: 12345678">
         <br>
-        <button onclick="generarKey()">GENERAR LLAVE</button>
+        <button onclick="generarKey()">GENERAR Key</button>
 
         <div id="keyDisplay">
             <p style="font-size: 12px; color: #00ff95; margin: 0;">TU KEY DE HOY:</p>
