--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <button onclick="generarKey()">GENERAR Key</button>
 
         <div id="keyDisplay">
-            <p style="font-size: 12px; color: #00ff95; margin: 0;">TU KEY DE HOY:</p>
+            <p style="font-size: 12px; color: #00ff95; margin: 0;">TU KEY ES:</p>
             <div class="key-text" id="finalKey"></div>
-            <p style="font-size: 10px; color: #555; margin-top: 10px;">Cópiala y pégala en Delta</p>
+            <p style="font-size: 10px; color: #555; margin-top: 10px;">Cópiala y pégala en el script</p>
         </div>
     </div>
 
